force-app/main/default/objects/LAD_Reason_for_Price_Adjustment__c/LAD_Reason_for_Price_Adjustment__c.object-meta.xml
<CustomObject>
    <label>Price Adjustment</label>
    <nameField>
        <displayFormat>PA-{0000}</displayFormat>
        <label>Price Adjustment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Price Adjustments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>