force-app/main/default/objects/LAD_Reason_for_Price_Adjustment__c/fields/LAD_Account__c.field-meta.xml
<CustomField>
    <fullName>LAD_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Price Adjustments</relationshipLabel>
    <relationshipName>Price_Adjustments</relationshipName>
    <type>Lookup</type>
</CustomField>