force-app/main/default/objects/LAD_Reason_for_Price_Adjustment__c/fields/LAD_AdjustedPrice__c.field-meta.xml
<CustomField>
    <fullName>LAD_AdjustedPrice__c</fullName>
    <description>New price in FOUK-7773</description>
    <label>Adjusted Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>