force-app/main/default/objects/LAD_Reason_for_Price_Adjustment__c/fields/LAD_Cart__c.field-meta.xml
<CustomField>
    <fullName>LAD_Cart__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cart</label>
    <referenceTo>WebCart</referenceTo>
    <relationshipLabel>Price Adjustments</relationshipLabel>
    <relationshipName>Price_Adjustments</relationshipName>
    <type>Lookup</type>
</CustomField>