force-app/main/default/objects/LAD_Reason_for_Price_Adjustment__c/fields/LAD_Cart_Item__c.field-meta.xml
<CustomField>
    <fullName>LAD_Cart_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cart Item</label>
    <referenceTo>CartItem</referenceTo>
    <relationshipLabel>Price Adjustments</relationshipLabel>
    <relationshipName>Price_Adjustments</relationshipName>
    <type>Lookup</type>
</CustomField>