force-app/main/default/objects/LAD_Reason_for_Price_Adjustment__c/fields/LAD_Comment__c.field-meta.xml
<CustomField>
    <fullName>LAD_Comment__c</fullName>
    <label>Comment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>