force-app/main/default/objects/LAD_Reason_for_Price_Adjustment__c/fields/LAD_Competitor__c.field-meta.xml
<CustomField>
    <fullName>LAD_Competitor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>FOUK-9001</description>
    <label>Competitor</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Competitor</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Price Adjustments (Competitor)</relationshipLabel>
    <relationshipName>Price_Adjustments1</relationshipName>
    <type>Lookup</type>
</CustomField>