force-app/main/default/objects/LAD_Reason_for_Price_Adjustment__c/fields/LAD_Competitor_Price_Validated__c.field-meta.xml
<CustomField>
    <fullName>LAD_Competitor_Price_Validated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Competitor Price Validated</label>
    <type>Checkbox</type>
</CustomField>