force-app/main/default/objects/LAD_Reason_for_Price_Adjustment__c/fields/LAD_Customer_Price__c.field-meta.xml
<CustomField>
    <fullName>LAD_Customer_Price__c</fullName>
    <description>FOUK-8995</description>
    <label>Customer Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>