force-app/main/default/objects/LAD_Reason_for_Price_Adjustment__c/fields/LAD_Order__c.field-meta.xml
<CustomField>
    <fullName>LAD_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>FOUK-8502</description>
    <label>Order</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Price Adjustments</relationshipLabel>
    <relationshipName>Price_Adjustments</relationshipName>
    <type>Lookup</type>
</CustomField>