force-app/main/default/objects/LAD_Reason_for_Price_Adjustment__c/fields/LAD_Product__c.field-meta.xml
<CustomField>
    <fullName>LAD_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Price Adjustments</relationshipLabel>
    <relationshipName>Price_Adjustments</relationshipName>
    <type>Lookup</type>
</CustomField>