force-app/main/default/objects/LAD_Reason_for_Price_Adjustment__c/fields/LAD_Product_Code__c.field-meta.xml
<CustomField>
    <fullName>LAD_Product_Code__c</fullName>
    <formula>LAD_Product__r.ProductCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Code</label>
    <type>Text</type>
</CustomField>