force-app/main/default/objects/LAD_Reason_for_Price_Adjustment__c/fields/LAD_Product_Name__c.field-meta.xml
<CustomField>
    <fullName>LAD_Product_Name__c</fullName>
    <formula>LAD_Product__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Name</label>
    <type>Text</type>
</CustomField>