force-app/main/default/objects/LAD_Reason_for_Price_Adjustment__c/fields/LAD_Product_SKU__c.field-meta.xml
<CustomField>
    <fullName>LAD_Product_SKU__c</fullName>
    <formula>LAD_Product__r.StockKeepingUnit</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product SKU</label>
    <type>Text</type>
</CustomField>