force-app/main/default/objects/LAD_Reason_for_Price_Adjustment__c/fields/LAD_Reason_of_Price_Adjustment__c.field-meta.xml
<CustomField>
    <fullName>LAD_Reason_of_Price_Adjustment__c</fullName>
    <label>Reason of Price Adjustment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>LAD_Value_Reason_For_Price_Adjustmen</valueSetName>
    </valueSet>
</CustomField>