force-app/main/default/objects/LAD_Reason_for_Price_Adjustment__c/recordTypes/LAD_Price_Match.recordType-meta.xml
<RecordType>
    <fullName>LAD_Price_Match</fullName>
    <active>true</active>
    <description>Story - FOUK 8991</description>
    <label>Price Match</label>
</RecordType>